--- a/app/views/admin/documents/index.html.erb
+++ b/app/views/admin/documents/index.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="p-4">
 <div class="flex items-center justify-between px-4 sm:px-6 lg:px-0">
   <h1 class="text-2xl font-bold tracking-tight text-gray-900">Documents</h1>
   <%= link_to new_admin_document_path, class: "hidden text-sm font-semibold text-blue-600 hover:text-cyan-500 sm:block" do %>
