--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,72 +1,148 @@
 <div class="p-6 inline-block w-4/5">
-<section class="bg-white p-5 m-3 rounded">
-<div class="flex flex-col lg:flex-row items-center gap-5 mt-5">
-  <div
-    class="flex justify-evenly items-center w-96 lg:w-1/3 p-3 m-3 border border-gray-300 rounded"
-  >
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      fill="none"
-      viewBox="0 0 24 24"
-      stroke-width="1.5"
-      stroke="currentColor"
-      class="text-green-400 w-20 h-20"
+  <section class="bg-white p-5 m-3 rounded">
+  <div class="flex flex-col lg:flex-row items-center gap-5 mt-5">
+    <div
+      class="flex justify-evenly items-center w-96 lg:w-1/3 p-3 m-3 border border-gray-300 rounded"
     >
-      <path
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        d="M15.182 15.182a4.5 4.5 0 01-6.364 0M21 12a9 9 0 11-18 0 9 9 0 0118 0zM9.75 9.75c0 .414-.168.75-.375.75S9 10.164 9 9.75 9.168 9 9.375 9s.375.336.375.75zm-.375 0h.008v.015h-.008V9.75zm5.625 0c0 .414-.168.75-.375.75s-.375-.336-.375-.75.168-.75.375-.75.375.336.375.75zm-.375 0h.008v.015h-.008V9.75z"
-      />
-    </svg>
-    <div class="text-center">
-      <h2 class="text-4xl font-bold pb-2"><%= @total_docs_count %></h2>
-      <h4 class="inline text-gray-500 text-md">Total Documents</h4>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="text-green-400 w-20 h-20"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M15.182 15.182a4.5 4.5 0 01-6.364 0M21 12a9 9 0 11-18 0 9 9 0 0118 0zM9.75 9.75c0 .414-.168.75-.375.75S9 10.164 9 9.75 9.168 9 9.375 9s.375.336.375.75zm-.375 0h.008v.015h-.008V9.75zm5.625 0c0 .414-.168.75-.375.75s-.375-.336-.375-.75.168-.75.375-.75.375.336.375.75zm-.375 0h.008v.015h-.008V9.75z"
+        />
+      </svg>
+      <div class="text-center">
+        <h2 class="text-4xl font-bold pb-2"><%= @total_docs_count %></h2>
+        <h4 class="inline text-gray-500 text-md">Total Documents</h4>
+      </div>
+    </div>
+    <div
+      class="flex justify-evenly items-center w-96 lg:w-1/3 p-3 m-3 border border-gray-300 rounded"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="text-gray-400 w-20 h-20"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M15.182 15.182a25.5 4.5 0 01-6.364 0M21 12a9 9 0 11-18 0 9 9 0 0118 0zM9.75 9.75c0 .414-.168.75-.375.75S9 10.164 9 9.75 9.168 9 9.375 9s.375.336.375.75zm-.375 0h.008v.015h-.008V9.75zm5.625 0c0 .414-.168.75-.375.75s-.375-.336-.375-.75.168-.75.375-.75.375.336.375.75zm-.375 0h.008v.015h-.008V9.75z"
+        />
+      </svg>
+      <div class="text-center">
+        <h2 class="text-4xl font-bold pb-2"><%= @total_teachers_count %></h2>
+        <h4 class="inline text-gray-500 text-md">Total Teachers</h4>
+      </div>
+    </div>
+    <div
+      class="flex justify-evenly items-center w-96 lg:w-1/3 p-3 m-3 border border-gray-300 rounded"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="text-red-300 w-20 h-20"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M15.182 16.318A4.486 4.486 0 0012.016 15a4.486 4.486 0 00-3.198 1.318M21 12a9 9 0 11-18 0 9 9 0 0118 0zM9.75 9.75c0 .414-.168.75-.375.75S9 10.164 9 9.75 9.168 9 9.375 9s.375.336.375.75zm-.375 0h.008v.015h-.008V9.75zm5.625 0c0 .414-.168.75-.375.75s-.375-.336-.375-.75.168-.75.375-.75.375.336.375.75zm-.375 0h.008v.015h-.008V9.75z"
+        />
+      </svg>
+      <div class="text-center">
+        <h2 class="text-4xl font-bold pb-2"><%= @total_impressionist_count %></h2>
+        <h4 class="inline text-gray-500 text-md">Total Doc Views Today</h4>
+      </div>
     </div>
   </div>
-  <div
-    class="flex justify-evenly items-center w-96 lg:w-1/3 p-3 m-3 border border-gray-300 rounded"
-  >
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      fill="none"
-      viewBox="0 0 24 24"
-      stroke-width="1.5"
-      stroke="currentColor"
-      class="text-gray-400 w-20 h-20"
-    >
-      <path
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        d="M15.182 15.182a25.5 4.5 0 01-6.364 0M21 12a9 9 0 11-18 0 9 9 0 0118 0zM9.75 9.75c0 .414-.168.75-.375.75S9 10.164 9 9.75 9.168 9 9.375 9s.375.336.375.75zm-.375 0h.008v.015h-.008V9.75zm5.625 0c0 .414-.168.75-.375.75s-.375-.336-.375-.75.168-.75.375-.75.375.336.375.75zm-.375 0h.008v.015h-.008V9.75z"
-      />
-    </svg>
-    <div class="text-center">
-      <h2 class="text-4xl font-bold pb-2"><%= @total_teachers_count %></h2>
-      <h4 class="inline text-gray-500 text-md">Total Teachers</h4>
+  </section>
+  <div>
+  <body class="antialiased font-sans bg-gray-200">
+    <div class="container mx-auto px-4 sm:px-8">
+        <div class="py-8">
+            <div>
+                <h2 class="text-2xl font-semibold leading-tight">Documents Created Today</h2>
+            </div>
+            <% if @documents_today.count > 0 %>
+            <div class="-mx-4 sm:-mx-8 px-4 sm:px-8 py-4 overflow-x-auto">
+                <div class="inline-block min-w-full shadow rounded-lg overflow-hidden">
+                    <table class="min-w-full leading-normal">
+                        <thead>
+                            <tr>
+                                <th
+                                    class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
+                                    Title
+                                </th>
+                                <th
+                                    class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
+                                    Owner
+                                </th>
+                                <th
+                                    class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
+                                    Public URL
+                                </th>
+                                <th
+                                    class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
+                                    Filename
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                           <% @documents_today.each do |document| %>
+                              <tr>
+                              <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                                  <div class="flex items-center">
+                                      <div class="ml-3">
+                                          <p class="text-gray-900 whitespace-no-wrap">
+                                              <%= document.name %>
+                                          </p>
+                                      </div>
+                                  </div>
+                              </td>
+                              <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                                  <p class="text-gray-900 whitespace-no-wrap"><%= document.user&.name %></p>
+                              </td>
+                              <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                                  <p class="text-gray-900 whitespace-no-wrap">
+                                  <%= link_to document_preview_path(document), class: '-m-1.5 p-1.5' do %>
+                                    URL
+                                  <% end %>
+                                  </p>
+                              </td>
+                              <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                                  <span
+                                      class="relative inline-block px-3 py-1 font-semibold text-green-900 leading-tight">
+                                      <span aria-hidden
+                                          class="absolute inset-0 bg-green-200 opacity-50 rounded-full"></span>
+                                      <span class="relative"><%= document.file.filename %></span>
+                                  </span>
+                              </td>
+                          </tr>
+
+                            <% end %>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <% else %>
+            <h2 class="text-l font-semibold leading-tight">No Documents Created Today</h2>
+            <% end %>
+        </div>
     </div>
+</body>
+
   </div>
-  <div
-    class="flex justify-evenly items-center w-96 lg:w-1/3 p-3 m-3 border border-gray-300 rounded"
-  >
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      fill="none"
-      viewBox="0 0 24 24"
-      stroke-width="1.5"
-      stroke="currentColor"
-      class="text-red-300 w-20 h-20"
-    >
-      <path
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        d="M15.182 16.318A4.486 4.486 0 0012.016 15a4.486 4.486 0 00-3.198 1.318M21 12a9 9 0 11-18 0 9 9 0 0118 0zM9.75 9.75c0 .414-.168.75-.375.75S9 10.164 9 9.75 9.168 9 9.375 9s.375.336.375.75zm-.375 0h.008v.015h-.008V9.75zm5.625 0c0 .414-.168.75-.375.75s-.375-.336-.375-.75.168-.75.375-.75.375.336.375.75zm-.375 0h.008v.015h-.008V9.75z"
-      />
-    </svg>
-    <div class="text-center">
-      <h2 class="text-4xl font-bold pb-2"><%= @total_impressionist_count %></h2>
-      <h4 class="inline text-gray-500 text-md">Total Doc Views Today</h4>
-    </div>
-  </div>
-</div>
-</section>
 </div>
